--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,7 @@
   <section class="container">
     <div class="login">
       <h1>登录</h1>
-      <form method="post" action="/user">
+      <form method="post" action="./user">
         <p><input type="text" name="userName" value="" placeholder="用户名"></p>
         <p><input type="password" name="userPassword" value="" placeholder="密码"></p>
         <p class="submit"><input type="submit" name="commit" value="登陆"></p>
